# chive-tool

./: .gitignore  Cargo.toml  README.md  output.txt
src/: main.rs
src/data/: achievements.json  mod.rs
src/process/: mod.rs
